# sRNA-TAPS

./: .gitignore  LICENSE  README.md  cli.py  environment.yaml  install_R_packages.R  sRNA_taps.bash  setup.cfg
.github/workflows/: ci.yml
config/: config.yaml
docs/: about.html  benchmarking.html  contact.html  docs.html  index.html  references.html  responsive.css  robots.txt  site.js  sitemap.xml  taps_chemistry_animation.html  tutorial.html
profile/: config.yaml
srnataps/: __init__.py  annotate.py  caller.py  cli.py  compare.py  contrast.py  evaluate.py  evidence_summary.py  replicate_contrast.py  report.py  snp.py  species.py  three_letter.py  tier.py  utils.py
srnataps/config/: config.yaml  samples.tsv
srnataps/report/R/: 00_setup.R  01_qc.R  02_biotype.R  03_modification.R  04_benchmark.R  05_sequence_logos.R  run_all.R
srnataps/workflow/: Snakefile
srnataps/workflow/rules/: align.smk  annotate.smk  benchmark.smk  biotype.smk  call.smk  condition.smk  report.smk  snp.smk
srnataps/workflow/scripts/: three_letter_align.sh
tests/: ci.yml  conftest.py  meta.yaml  simulate_taps_srna.py  test_annotate.py  test_caller.py  test_cli.py  test_compare.py  test_contrast.py  test_evaluate.py  test_evidence_summary.py  test_replicate_contrast.py  test_snp.py  test_species.py  test_three_letter.py  test_tier.py  test_utils.py
tests/test_data/: .gitignore
workflow/: Snakefile
workflow/rules/: align.smk  annotate.smk  benchmark.smk  biotype.smk  call.smk  compare.smk  multiqc.smk  qc.smk  report.smk  snp.smk  trim.smk
workflow/scripts/: annotate_taps.py
(+2 files in other folders)
