[metadata]
name = sRNA-TAPS
version = 0.2.3
author = Bennett Henzeler
author_email = bennett.henzeler@cup.lmu.de
description = TAPS-based m5C detection pipeline for small RNA sequencing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bhenzeler/sRNA-TAPS
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Bio-Informatics
    Intended Audience :: Science/Research
keywords = TAPS, m5C, methylation, small RNA, tRNA, miRNA, snoRNA, rRNA, epitranscriptomics

[options]
packages = find:
python_requires = >=3.10
install_requires =
    click>=8.0
    pysam>=0.22
    pandas>=2.1
    numpy>=1.26
    scipy>=1.12
    statsmodels>=0.14
    snakemake>=7.0
    jinja2>=3.0
    pyyaml>=6.0
    rich>=13.0

[options.entry_points]
console_scripts =
    srnataps = srnataps.cli:cli

[options.package_data]
srnataps =
    workflow/Snakefile
    workflow/rules/*.smk
    workflow/scripts/*.py
    workflow/profiles/slurm/config.yaml
    config/config.yaml
    config/samples.tsv

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    black>=23.0
    flake8>=6.0
benchmark =
    rastair
    astair

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
